<resources>
    <string name="app_name">ProjectPrototype</string>
    <string name="skip">Skip</string>
    <string name="phoneNo">Phone Number</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_user">New User?</string>
    <string name="signup">Signup Here</string>
    <string name="or">Or</string>
</resources>
