<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/btn_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/padding_normal_8"
            android:layout_marginTop="@dimen/padding_normal_8"
            android:textColor="@color/txt_color"/>

        <ImageView
            android:layout_width="250dp"
            android:layout_height="160dp"
            android:id="@+id/logo"
            android:src="@drawable/small_logo"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btn_skip"
            android:layout_marginTop="@dimen/padding_too_large_30"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phoneNumber"
            android:layout_below="@+id/logo"
            android:layout_marginTop="@dimen/padding_extra_large_20"
            android:layout_marginLeft="@dimen/padding_too_large_30"
            android:layout_marginRight="@dimen/padding_too_large_30"
            android:paddingLeft="@dimen/padding_small_5"
            android:paddingTop="@dimen/padding_small_5"
            android:hint="@string/phoneNo"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneNumber"
            android:layout_marginLeft="@dimen/padding_too_large_30"
            android:layout_marginTop="@dimen/padding_extra_large_20"
            android:layout_marginRight="@dimen/padding_too_large_30"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/padding_small_5"
            android:paddingTop="@dimen/padding_small_5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login"
            android:text="@string/login"
            android:gravity="center_horizontal"
            android:layout_below="@id/password"
            android:textColor="@color/white"
            android:background="@drawable/rounded_dark_blue_login_btn"
            android:layout_marginLeft="@dimen/padding_too_large_30"
            android:layout_marginTop="@dimen/padding_extra_large_20"
            android:layout_marginRight="@dimen/padding_too_large_30"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/or"
            android:text="@string/or"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/login"
            android:layout_marginTop="@dimen/padding_too_large_30"
            android:layout_marginBottom="@dimen/padding_too_large_30"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/or"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/padding_too_large_30">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newUser"
            android:text="@string/new_user"
            android:textColor="@color/txt_color"
            android:layout_marginRight="@dimen/padding_small_5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signup"
            android:textColor="@color/blue"
            android:text="@string/signup"/>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>